# e-market-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint-and-tests.yml
app/: crud.py  database.py  main.py
app/crud/: items.py  users.py
app/routers/: items.py  users.py
tests/: conftest.py  test_main.py  test_router_items.py  test_router_users.py
