[tool.poetry]
name = "e-market-api"
version = "0.1.0"
description = ""
authors = ["Vasyl <vasyl.kliushta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
